cmake_minimum_required(VERSION 4.2)
project(Collens_Fiore_Walowski_Capstone_Stubs)

set(CMAKE_CXX_STANDARD 20)

add_executable(Collens_Fiore_Walowski_Capstone_Stubs Collens-Fiore.Walowski.Capstone.Stubs.cpp
        TheStackIn25Words.cpp
        TheStackIn25Words.h
        Node.cpp
        Node.h
        Menu.h
        Menu.cpp)

